--- a/02-variable.yml
+++ b/02-variable.yml
@@ -10,3 +10,19 @@
 
 # Here in the above msg line, we have the value starting with a string URL , But if a value starting with a variable then we need to quote it
         # msg: "{{ URL }}" , Must and should double quote if the value starts with variable in ansible
+
+- name: Demo on variables - from task
+  hosts: localhost
+  connection: local
+  tasks:
+    - name: Print URL
+      ansible.builtin.debug:
+        msg: URL - {{ URL }}
+      vars:
+        URL: tasks.google.com
+
+- name: Demo on variables - Role variables
+  hosts: localhost
+  connection: local
+  roles:
+    - sample
