--- a/02-variable.yml
+++ b/02-variable.yml
@@ -33,3 +33,15 @@
 # 3. Roles - vars
 # 4. Playbook - Play Vars
 # 5. Roles - defaults
+
+- name: Demo on register variables
+  hosts: localhost
+  connection: local
+  become: yes
+  tasks:
+    - name: check package
+      ansible.builtin.dnf:
+        name: zlib
+        state: installed
+
+
