--- a/02-variable.yml
+++ b/02-variable.yml
@@ -43,5 +43,10 @@
       ansible.builtin.dnf:
         name: zlib
         state: installed
+        register: out
+
+    - name: Print out
+      ansible.builtin.debug:
+        msg: "{{ out }}"
 
 
