--- a/02-variable.yml
+++ b/02-variable.yml
@@ -39,7 +39,7 @@
   connection: local
   become: yes
   tasks:
-    - name: check package
+    - name: Check package
       ansible.builtin.dnf:
         name: zlib
         state: installed
