Install config changed to shell

--- a/04-conditions.yml
+++ b/04-conditions.yml
@@ -12,3 +12,7 @@
       ansible.builtin.debug:
         msg: Ubuntu
       when: os == "ubuntu"
+    - name: Print Even Number
+      ansible.builtin.debug:
+        msg: Number {{ number }} is even
+      when: "{{number/2}}" == 0
