--- a/04-conditions.yml
+++ b/04-conditions.yml
@@ -15,4 +15,6 @@
     - name: Print Even Number
       ansible.builtin.debug:
         msg: Number {{ number }} is even
-      when: "{{number/2}}" == 0
+      when: reminder == 0
+      vars:
+        reminder: "{{ number / 2 }}"
