--- a/04-conditions.yml
+++ b/04-conditions.yml
@@ -12,9 +12,14 @@
       ansible.builtin.debug:
         msg: Ubuntu
       when: os == "ubuntu"
+
+    - name: Get reminder
+      ansible.builtin.debug: echo $(({{number}}%2))
+      register: reminder
+
+
     - name: Print Even Number
       ansible.builtin.debug:
         msg: Number {{ number }} is even
-      when: reminder == 0
-      vars:
-        reminder: "{{ number / 2 }}"
+      when: reminder.stdout == 0
+
