--- a/05-tags.yml
+++ b/05-tags.yml
@@ -14,3 +14,4 @@
       tags:
         - service
         - systemd
+# If a tag is not given , then irrespective of any tag value that task will run.debug
