--- a/09-handlers.yml
+++ b/09-handlers.yml
@@ -3,9 +3,9 @@
   connection: local
   tasks:
     - name: Install zlib
-      ansible.builtin.dnf:
-        name: zlib
-        state: installed
+      ansible.builtin.shell: ls
+      notify:
+        - Say Hello
 
   handlers:
     - name: Say Hello
