--- a/10-hashicorp-vault.yml
+++ b/10-hashicorp-vault.yml
@@ -4,4 +4,4 @@
   tasks:
     - name: Print Password
       ansible.builtin.debug:
-        msg: "{{ lookup('hashi_vault', 'test/data/my_credentials:password token={{ vault_token }} url=https://172.31.16.175:8200 validate_certificate')}}"
+        msg: "{{ lookup('hashi_vault', 'test/data/my_credentials:password token={{ vault_token }} url=https://172.31.16.175:8200 validate_certs=False')}}"
